--- a/apps/menthol_app/static/menthol_app/dashboard.css
+++ b/apps/menthol_app/static/menthol_app/dashboard.css
@@ -7,3 +7,12 @@
 .card{
     margin-bottom: 5%;
 }
+
+.test{
+    width:45%
+}
+
+#transfers_content{
+    display:flex;
+    justify-content: space-evenly;
+}
